--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Crunch.ts by kamir</title>
+    <title>crunch.TS</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Crunch.ts</h1>
-          <h2>the fast way of building time series processing pipelines for Hadoop using Crunch </h2>
+          <h1>crunch.TS</h1>
+          <h2>... the easy way of building <b>time series processing pipelines</b> for Hadoop, using Apache Crunch</h2>
         </header>
 
         <section id="downloads" class="clearfix">
